@@ -1,15 +1,21 @@
+Tue Nov 29 19:28:56 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Countdown_Time.h:
+        * ace/Countdown_Time.cpp:
+          Use default value for constructor reducing the number of constructors
+
 Tue Nov 29 15:50:06 UTC 2011  Martin Corino  <mcorino@remedy.nl>
 
         * ace/Timer_Queue_T.h:
         * ace/Timer_Queue_T.inl:
-        
+
           Added get_timer_method() to be able reuse timer method
           setting.
-          
+
         * ace/Countdown_Time.h:
         * ace/Countdown_Time.inl:
         * ace/Countdown_Time.cpp:
-        
+
           Added option to use application defined timer like
           timer queue.
 
